--- a/Laboratory/View/EquipmentInfoView.xib
+++ b/Laboratory/View/EquipmentInfoView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
             <connections>
+                <outlet property="availableLabel" destination="rS8-1g-o88" id="bha-z4-3ej"/>
                 <outlet property="contentView" destination="c5y-RN-dVf" id="iP2-Pm-ror"/>
                 <outlet property="descriptionTextView" destination="0S7-UN-qNw" id="GNc-Sp-sPB"/>
                 <outlet property="equipmentImageView" destination="RMK-SQ-knl" id="Egl-US-a85"/>
@@ -21,55 +22,58 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="c5y-RN-dVf">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fzk-oy-24n">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="O70-PF-DWm">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="830"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="600.33333333333337"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rS8-1g-o88">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="20.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5B-nS-CIn">
-                                    <rect key="frame" x="0.0" y="28.5" width="414" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="28.333333333333329" width="375" height="20.333333333333329"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-6n-gAX">
-                                    <rect key="frame" x="0.0" y="57" width="414" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="56.666666666666679" width="375" height="20.333333333333336"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
-                                    <rect key="frame" x="0.0" y="85.5" width="414" height="236"/>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
+                                    <rect key="frame" x="0.0" y="85" width="375" height="46"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="46" id="pxi-Om-rfs"/>
+                                    </constraints>
                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vru-Gd-QKb">
-                                    <rect key="frame" x="0.0" y="329.5" width="414" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="139" width="375" height="20.333333333333343"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw">
-                                    <rect key="frame" x="0.0" y="358" width="414" height="50"/>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw">
+                                    <rect key="frame" x="0.0" y="167.33333333333334" width="375" height="50"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMK-SQ-knl">
-                                    <rect key="frame" x="0.0" y="416" width="414" height="414"/>
+                                    <rect key="frame" x="0.0" y="225.33333333333331" width="375" height="374.99999999999994"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="RMK-SQ-knl" secondAttribute="height" multiplier="1:1" id="qae-6O-ROP"/>
                                     </constraints>
@@ -85,17 +89,17 @@
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="O70-PF-DWm" secondAttribute="trailing" id="2cD-Oe-hc6"/>
-                        <constraint firstItem="O70-PF-DWm" firstAttribute="width" secondItem="Fzk-oy-24n" secondAttribute="width" id="QQF-LC-LTQ"/>
                         <constraint firstItem="O70-PF-DWm" firstAttribute="top" secondItem="Fzk-oy-24n" secondAttribute="top" id="UrD-Xq-Z7F"/>
                         <constraint firstItem="O70-PF-DWm" firstAttribute="leading" secondItem="Fzk-oy-24n" secondAttribute="leading" id="VJp-mw-yg3"/>
-                        <constraint firstAttribute="bottom" secondItem="O70-PF-DWm" secondAttribute="bottom" id="sRT-X6-WwR"/>
+                        <constraint firstAttribute="bottom" secondItem="O70-PF-DWm" secondAttribute="bottom" id="WCA-cV-g8W"/>
+                        <constraint firstItem="O70-PF-DWm" firstAttribute="width" secondItem="Fzk-oy-24n" secondAttribute="width" id="oZj-ag-kw9"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Fzk-oy-24n" firstAttribute="top" secondItem="SxJ-5z-LwO" secondAttribute="top" id="Au0-xN-Xxf"/>
-                <constraint firstItem="SxJ-5z-LwO" firstAttribute="bottom" secondItem="Fzk-oy-24n" secondAttribute="bottom" id="Ftb-8Q-6YM"/>
+                <constraint firstItem="Fzk-oy-24n" firstAttribute="bottom" secondItem="SxJ-5z-LwO" secondAttribute="bottom" id="cVJ-Ro-rL7"/>
                 <constraint firstItem="Fzk-oy-24n" firstAttribute="leading" secondItem="SxJ-5z-LwO" secondAttribute="leading" id="ntC-Fc-OP8"/>
                 <constraint firstItem="SxJ-5z-LwO" firstAttribute="trailing" secondItem="Fzk-oy-24n" secondAttribute="trailing" id="rJP-Wv-Vqu"/>
             </constraints>
