--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -56,6 +56,33 @@
             </objects>
             <point key="canvasLocation" x="2415" y="-672"/>
         </scene>
+        <!--Lab InfoVC-->
+        <scene sceneID="u5g-r4-aj8">
+            <objects>
+                <viewController storyboardIdentifier="LabInfoVC" id="0cc-Dk-jsw" customClass="LabInfoVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fig-9v-6xp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ppx-0L-dq6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ppx-0L-dq6" firstAttribute="leading" secondItem="34Q-Mw-go4" secondAttribute="leading" id="Itb-7E-S2t"/>
+                            <constraint firstItem="34Q-Mw-go4" firstAttribute="trailing" secondItem="Ppx-0L-dq6" secondAttribute="trailing" id="Z8f-C0-1Oq"/>
+                            <constraint firstItem="34Q-Mw-go4" firstAttribute="bottom" secondItem="Ppx-0L-dq6" secondAttribute="bottom" id="vjy-IB-E6I"/>
+                            <constraint firstItem="Ppx-0L-dq6" firstAttribute="top" secondItem="34Q-Mw-go4" secondAttribute="top" id="yEd-1s-KkS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="34Q-Mw-go4"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yBY-t3-Ihl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3268" y="-677"/>
+        </scene>
         <!--Lab CreateVC-->
         <scene sceneID="Fuo-z8-gNz">
             <objects>
