--- a/Laboratory/View/LabEquipmentEditTVCell.xib
+++ b/Laboratory/View/LabEquipmentEditTVCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LabItemEditCell" id="KGk-i7-Jjw" customClass="LabItemEditTVCell" customModule="Laboratory" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LabEquipmentEditCell" id="KGk-i7-Jjw" customClass="LabEquipmentEditTVCell" customModule="Laboratory" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -33,7 +33,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="itemNameLabel" destination="Sfu-Q3-u9G" id="IVc-p8-4vh"/>
+                <outlet property="equipmentNameLabel" destination="Sfu-Q3-u9G" id="IVc-p8-4vh"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="124.55357142857142"/>
         </tableViewCell>
